<resources>
    <string name="app_name">Food App</string>
    <string name="titulo">WHY NOT COOK</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="sesion">INICIAR SESIÓN</string>
    <string name="direccion">DIRECCION</string>
    <string name="numero">NUMERO, PISO Y PUERTA</string>
    <string name="crear">CREAR CUENTA</string>
    <string name="menus">MENÚS</string>
    <string name="receta">RECETAS</string>
    <string name="pagar">PAGAR</string>
    <string name="cancelar">CANCELAR PEDIDO</string>
    <string name="dni">DNI</string>
    <string name="tarjeta">NUMERO DE TARJETA</string>
    <string name="pedido">PEDIDO ENTERO</string>
    <string name="plato">MENÚS</string>
    <string name="settings">SETTINGS</string>
    <string name="salir">CERRAR SESIÓN</string>
    <string name="usuario">NOMBRE DE USUARIO</string>
    <string name="bebida">BEBIDAS</string>
    <string name="aperitivo">APERITIVOS</string>
    <string name="hamburguesas">HAMBURGUESAS</string>
    <string name="pizza">PIZZAS</string>
    <string name="principal">PRINCIPALES</string>
    <string name="postre">POSTRES</string>
</resources>